# utahvidia

./: .gitignore  PATRONS.md  README.md  pyproject.toml  utah_latency_shield.py  utah_osmotic_router.py  utah_photonic_bridge.py  utah_zeo_shield.py  utahvidia_compiler.py  utahvidia_core.py  zeo_shield_kernel.cu
.github/workflows/: build-gaming-exe.yml
benchmarks/: __init__.py  benchmark_zeo_shield.py
docs/: ARCHITECTURE.md  README.md
docs/en/: children.md  cto.md  cuda-programmers.md  donate.md  gaming-children.md  gaming-faq.md  gaming-index.md  gaming-overview.md  gaming-technical.md  gaming-tutorial.md  gpu-unlock-patron.md  index.md  latency-shield.md  migration-guide.md  non-technical.md  technical.md
docs/et/: children.md  cto.md  cuda-programmers.md  donate.md  gaming-children.md  gaming-faq.md  gaming-index.md  gaming-overview.md  gaming-technical.md  gaming-tutorial.md  gpu-unlock-patron.md  index.md  latency-shield.md  migration-guide.md  (+2 more)
embedded/: utah_photonic_bridge.py
launchers/: README.md  UtahVidia-Gaming.bat  UtahVidia-Gaming.py  build_gaming_exe.ps1
native/: latency_shield_bindings.cpp  latency_shield_kernel.cu  zeo_shield_bindings.cpp
tests/: test_gaming.py  test_patron.py  test_utahvidia.py  test_zeo_shield.py
utahvidia/: __init__.py  cli.py  compiler.py  core.py  fractal_graph.py  gaming_launcher.py  gaming_profiles.py  holographic.py  latency_shield.py  microvisor.py  native_loader.py  orchestrator.py  osmotic.py  patron.py  photonic_multi.py  photonic_sim.py  reality_engine.py  speculative_intent.py  vram_osmotic.py  zeo_shield.py
(+64 files in other folders)
