[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utahvidia"
version = "0.4.0"
description = "Universal Compute Bridge — hardware-agnostic GPU middleware"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Utah-Vid-ia Project" }]
keywords = ["gpu", "cuda", "triton", "mlir", "compute"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
compiler = ["triton>=2.1; platform_system != 'Windows'"]
dev = ["pytest>=7.0"]

[project.scripts]
utahvidia = "utahvidia.cli:main"
utahvidia-bench = "benchmarks.benchmark_zeo_shield:main"
utahvidia-gaming = "utahvidia.gaming_launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["utahvidia*", "benchmarks*"]

[tool.setuptools.package-data]
utahvidia = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
